<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:theme="@style/ToolbarColoredBackArrow"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:titleTextColor="@color/white"
        android:background="@color/sp_main_color"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:fontFamily="@font/montserratregular"
                android:text="About E - Blogger"
                android:textColor="@color/black" />



            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/_8sdp"

                    android:text="@string/terms_conditions_0"
                    android:layout_height="wrap_content" />



            </LinearLayout>

            <in.org.eonline.eblog.Utilities.NonScrollExpandableListView
                android:id="@+id/faq"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:groupIndicator="@null"
                android:scrollbars="vertical" />


        </LinearLayout>

    </ScrollView>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/faq_layout">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/faq_1"
            android:textColor="#000000"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:text="@string/faq_2"
            android:textColor="#000000"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:text="@string/faq_3"
            android:textColor="#000000"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:text="@string/faq_4"
            android:textColor="#000000"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:text="@string/faq_5"
            android:textColor="#000000"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:text="@string/faq_6"
            android:textColor="#000000"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:text="@string/faq_7"
            android:textColor="#000000"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:text="@string/faq_8"
            android:textColor="#000000"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:text="@string/faq_9"
            android:textColor="#000000"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:text="@string/faq_10"
            android:textColor="#000000"
            android:layout_marginBottom="@dimen/_80sdp"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/faq_adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-7722811932766421/9057397449"
            android:layout_alignParentBottom="true">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>

</LinearLayout>