<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tnc_layout">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:text="Welcome to E-Blogger!"
            android:textColor="#000000"
            android:layout_marginBottom="@dimen/_20sdp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:text="@string/terms_conditions_0"
            android:textColor="#000000"
            android:layout_marginBottom="@dimen/_20sdp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:text="@string/terms_conditions_1"
            android:textColor="#000000"
            android:layout_marginBottom="@dimen/_20sdp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:text="@string/terms_conditions_2"
            android:textColor="#000000"
            android:layout_marginBottom="@dimen/_20sdp"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:text="@string/terms_conditions_3"
            android:textColor="#000000"
            android:layout_marginBottom="@dimen/_20sdp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:text="@string/terms_conditions_4"
            android:textColor="#000000"
            android:layout_marginBottom="@dimen/_20sdp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:text="@string/terms_conditions_5"
            android:textColor="#000000"
            android:layout_marginBottom="@dimen/_20sdp"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:text="@string/terms_conditions_6"
            android:textColor="#000000"
            android:layout_marginBottom="@dimen/_80sdp"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/tnc_adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-7722811932766421/9635271508"
            android:layout_alignParentBottom="true">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
